    scrolling for virtual lines with 'nowrap'.
• |vim.secure.read()| now returns `true` for trusted directories. Previously
  it would return `nil`, which made it impossible to tell if the directory was
  actually trusted.
• Added |vim.lsp.is_enabled()| to check if a given LSP config has been enabled
  by |vim.lsp.enable()|.

BUILD

• On Windows, `tee.exe` is installed with `nvim.exe` by default so that
  commands like :make, :grep work out of the box.

DEFAULTS

• Highlighting:
  • Improved styling of :checkhealth and :help buffers.

• Mappings:
  • |grn| in Normal mode maps to |vim.lsp.buf.rename()|
  • |grr| in Normal mode maps to |vim.lsp.buf.references()|
  • |gri| in Normal mode maps to |vim.lsp.buf.implementation()|
  • |gO| in Normal mode maps to |vim.lsp.buf.document_symbol()|
  • |gra| in Normal and Visual mode maps to |vim.lsp.buf.code_action()|
  • |grt| in Normal mode maps to |vim.lsp.buf.type_definition()|
  • CTRL-S in Insert and Select mode maps to |vim.lsp.buf.signature_help()|
  • Mouse |popup-menu| includes an "Open in web browser" item when you right-click
    on a URL.
  • Mouse |popup-menu| includes a "Go to definition" item when LSP is active
    in the buffer.
  • Mouse |popup-menu| includes "Show Diagnostics", "Show All Diagnostics" and
    "Configure Diagnostics" items when there are diagnostics in the buffer.
  • |]d-default| and |[d-default| accept a count.
  • |[D-default| and |]D-default| jump to the first and last diagnostic in the
    current buffer, respectively.
  • Mappings inspired by Tim Pope's vim-unimpaired:
    • |[q|, |]q|, |[Q|, |]Q|, |[CTRL-Q|, |]CTRL-Q| navigate through the |quickfix| list
    • |[l|, |]l|, |[L|, |]L|, |[CTRL-L|, |]CTRL-L| navigate through the |location-list|
    • |[t|, |]t|, |[T|, |]T|, |[CTRL-T|, |]CTRL-T| navigate through the |tag-matchlist|
    • |[a|, |]a|, |[A|, |]A| navigate through the |argument-list|
    • |[b|, |]b|, |[B|, |]B| navigate through the |buffer-list|